@@ -123,19 +123,11 @@ jacocoTestReport {
 }
 
 startScripts {
+    applicationName = "dwh-migration-dumper-starter"
     classpath = files('$APP_HOME/lib/*')
-    defaultJvmOpts = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
-}
-
-task createStartScriptForJava8(type: CreateStartScripts) {
-    mainClass = tasks.startScripts.mainClass
-    applicationName = 'dwh-migration-dumper-java8'
-    outputDir = tasks.startScripts.outputDir
-    classpath = tasks.startScripts.classpath
 }
 
 tasks.named('installDist') {
-    dependsOn 'createStartScriptForJava8'
     dependsOn 'cloudExtractorStartScripts'
     dependsOn 'cloudExtractorStartScriptsForJava8'
 }
@@ -942,6 +934,12 @@ distributions {
         contents {
             from installDist
             from(cloudExtractorStartScripts) {
+                into "bin"
+            }
+            from("src/main/sh/dwh-migration-dumper") {
+                into "bin"
+            }
+            from("src/main/sh/dwh-migration-dumper.bat") {
                 into "bin"
             }
             from(generateLicenseReport) {
